welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:29: error: class Array takes type parameters
def decalage(d:Int,T:Array):Array[Color]={
                     ^Array2:37: error: class Array takes type parameters
def colonne(D:Array){
              ^Array2:29: error: class Array takes type parameters
def decalage(d:Int,T:Array):Array[Color]={
                     ^Array2:37: error: class Array takes type parameters
def colonne(D:Array){
              ^